<resources>
    <string name="app_name">Rising 11</string>
    <string name="title_activity_create_contest">CREATE A CONTEST</string>
    <string name="title_activity_home">RISING 11</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_notification">Notification</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="underline_string"><u>Know more</u></string>
    <string name="line1_bullet">\u2022 Track the status of withdrawals</string>
    <string name="line2_bullet">\u2022 Enjoy access to exciting features &amp; rewards</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="paytm_mid">YfSFky58226330996541</string>
    <string name="generate_checksum_url">http://rising11.com/apps/apis/paytm/generateChecksum.php</string>
    <string name="callback_url">https://pguat.paytm.com/paytmchecksum/paytmCallback.jsp</string>
    <string name="signup">http://rising11.com/apps/apis/register-user.php</string>
    <string name="signin">http://rising11.com/apps/apis/login.php</string>
    <string name="forgetpass">http://rising11.com/apps/apis/forget-pass.php</string>
    <string name="update_profile">http://rising11.com/apps/apis/update-profile.php</string>
    <string name="verifymobile">http://rising11.com/apps/apis/verify-mobile.php</string>
    <string name="userdetails">http://rising11.com/apps/apis/get-user-details.php</string>
    <string name="wallet">http://rising11.com/apps/apis/get-wallet-balance.php</string>
    <string name="create_contest">http://rising11.com/apps/apis/create-contest.php</string>
    <string name="add_contets_prize">http://rising11.com/apps/apis/add-contest-prize.php</string>
    <string name="mobile_tab">MOBILE &amp; EMAIL</string>
    <string name="ID_tab">ID PROOF</string>
    <string name="bank_tab">BANK</string>
    <string name="alert_title">Exit App!</string>
    <string name="alert_detail"> Sure to exit RISING 11?</string>
    <string name="how_it_works_step">Step-1:- Verify your email &amp; mobile no.\n\nStep-2:-Refer your Friend <b>Rising11</b> by unique referral code.
        \n\nStep-3:-When your Friend Register and Verify their email &amp; mobile no. , your friend will get ₹50 instantly and you will get ₹15 cash bonus instantly.
        \n\nStep-4:-when your Friend Verify their pan-card &amp; Bank-account further you will get ₹10 cash bonus.</string>
    <string name="how_it_works_button">***If any user will found to miss-use of cash bonus by creating multiple accounts &amp; verify them by fake documents then it will be considered under fair-play violation.
        \n\n*Please refer Terms &amp; Conditions (Refer &amp; Earn) and Fair-Play Violation.</string>
    <string name="fair_play_rules_top">What are the rules of FairPlay?</string>
    <string name="fair_play_rules_middle">• You cannot create multipe account.
        \n\n• You cannot misuse your invite code in any way.
         \n\n• You cannot misuse your cash bonus in any way.
         \n \n\nWhat happens when:
          \n\n• You misuse your Invite Code by creating multiple account:
         \n\n<b> WE BLOCK THE CASH BONUS AND THE INVITE CODE</b>
         \n\n• You misuse the cash bonus and win multiple contests:
         \n\n<b>WE TAKE BACK WINNING OF THAT CONTEST</b>
    </string>
    <string name="fair_play_TC_1">Rising11 considers Fair Play to be a priority at its platform and any user violating the Fair Play Terms of Rising11 shall be entitled to bear various consequences including Blocking of the user Account.</string>
    <string name="fair_play_TC_2">• The people you are referring should all be genuine accounts and the user should not use any fake accounts to gain the “Refer &amp; Earn” cash bonus amount.
        \n\n• The PAN card of all your referred friends should be verified. In an event, the PAN card of more than 3 of your referred friends are not verified the user will be considered as violating the Fair Play Terms of Rising11.
        \n\n• A user creating more than one account on Rising11 platform will be considered as violating the Fair Play Terms of Rising11 as Rising11 neither allows nor encourages any user to create more than one user account on Rising11.
        \n\n• Withdrawing money by using any unlawful or illegal means or trying to withdraw money by illegal manners is considered as Fair Play violation at Rising11.
        \n\n• If a user is found submitting fake copies or someone else’s documents while registering with Rising11, the act will be considered as violating the Fair Play Terms of Rising11.
        \n\n• In case a user is found to be creating and using multiple accounts on a single device amid regular platform audits, then, the case shall be considered to violate Fair Play Terms of Rising11 and shall attract needed actions. As part of the action, the withdrawal request of the user shall be put on hold.</string>
    <string name="fair_play_TC_3">\n\n• As a part of consequences for violating the terms of Fair Play at Rising11, the account of the user found to be violating the Fair Play terms will be blocked.
        \n\n• Further, in other scenario the total amount present in the Rising11 wallet of the user violating the Fair Play terms of Rising11 will be reduced to zero.</string>
    <string name="Cric_APi_Key">1FiCfYXHgZPywU2JFPgdnPL7NX63</string>
    <string name="Cric_cricket_score">https://rising11.com/apps/apis/get-cricket-score.php?</string>
    <string name="Cric_ranking">https://rising11.com/apps/apis/get-contest-details.php?</string>
    <string-array name="sort_by_value">
        <item>Player Type</item>
        <item>Points</item>
    </string-array>
    <string name="legality_part_1"> Fantasy sports are considered to be a legal practice around the world with certain states being an exception. The fantasy sports are entirely based on the concept of Game of Skills, wherein the users form their own teams and are allocated points on the basis of on-field performance of their chosen players.
        \n\nThe services and Fun Features offered by Rising11 are all a game of skills and do not promote, encourage or support gambling or betting in any manner. The game of skills can be defined as a game wherein the skills of the individuals participating in any online fantasy game play a dominant role rather than the mere luck of the individuals. The individuals in game of skills use their skills, knowledge, training and attention for participation and winning.
        \n\nRising11 is completely legal as it offers services, Fun Features, Program(s) and Contest(s) related to fantasy sports. The services, contest(s) and program(s) related to fantasy sports offered by Rising11 enables its users to create their own team of playing XI prior the match begins and then the teams are awarded points on the basis of the real life performance of the players chosen by the users in their playing XI. The individual whose team scores the highest aggregate of points is announced as the winners. The formation of team by the users of Rising11 is entirely dependent on the skills, knowledge and attention of the users which makes the fantasy sports offered at Rising11 a game of skills and 100% legal.
    </string>
    <string name="legality_part_2">The game of skills such as the fantasy sports gamings are considered to be legal all over India expect certain states such as Assam, Odisha, Telangana and Nagaland.
        \n\nThe PGA defines the act of “public gambling” and keeping of a common gaming house as a criminal and punishable act in India. The Public Gambling Act, 1867 (“PGA, 1867”) is recognized as the primary legality driving the prevalence of gambling in India.
        \n\nHowever, the fantasy sports games are considered to be an exception under the PGA wherein the provisions and punishments of PGA shall not be applicable to games played by the user using their skills and knowledge as primary tools.
    </string>
    <string name="legality_part_3">There are various states in India wherein the laws related to the game of skills are unclear. In this regard, for the websites offering fantasy sports it remains unclear whether to offer the services for free or not. The Indian states with no clearance regarding the offering of pay-to-play contests include Assam, Odisha, Telangana and Nagaland.
        \n\nIn this context, Rising11 does not permits the users identified as the residents of Odisha, Telangana, Assam and Nagaland to participate in the pay-to-play contest(s) organized by Rising11.
</string>
    <string name="about_us_1"><b>Rising11</b> is a most promising &amp; growing Fantasy Platform in India, where Sports are not only sports- it’s more than a religion for peoples. Where the peoples are come to stadium &amp; also watch the matches In-Front-Of TV for entertainment and support Their Teams and favourite players as only spectators.
        \n\nBut in this modern Era where peoples are watching matches only as a spectator on the other side Rising 11 offers a very exciting &amp; promising game to peoples from all across the India to make their dreams come true to play on Rising11 by creating their Teams and win real money by join the contests on fantasy platform from real time live matches in multiple sports (CRICKET, FOOTBALL, KABADDI etc.).
        \n\nSo now stop to watch only, it’s time to playing on Rising11 and become a Rising Hero of your own life &amp; world.
    </string>
    <string name="about_us_2">Our vision to establish the Rising11 is to give a most promising, superior and Trustable fantasy platform to user for showing his/her skills &amp; knowledge and live him/her dreams in real life. And we also want that the every sports lover will enable their control on their own team &amp; show their skills.</string>
    <string name="about_us_3"><b>Rising11</b> wants to make a new world of Fantasy Sports Gaming where every user think that they are not less than a real life player and they have got the skills that make them to a <b>RISING HERO</b> of the world.
        \n\nWe want to make a different level of Fantasy gaming to offer the Best Fantasy Services in multiple sports. To reach the Heights we planned to achieve, we working extraordinary and walking to a path of <b>Truth-Trust-Transparency.</b></string>
</resources>