<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Verify_User_card">


    <android.support.design.widget.TabLayout
        android:id="@+id/tb_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:tabTextColor="#e3e3e3"
        app:tabSelectedTextColor="#3c3c3c">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:id="@+id/t1"
            android:layout_height="wrap_content"
            android:text="@string/mobile_tab" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t2"
            android:text="@string/ID_tab" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t3"
            android:text="@string/bank_tab" />


    </android.support.design.widget.TabLayout>

</LinearLayout>